# ChatApp

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  install-linux.sh  nginx-chatapp.conf  start-distributed.sh  vcpkg.json
ChatClient/: .gitignore  ChatClient.pro  ChatMainPage.h  HttpApiClient.cpp  HttpApiClient.h  LoginPage.cpp  LoginPage.h  MainPage.cpp  MainPage.h  MainPage.qrc  RegisterPage.cpp  RegisterPage.h  UserSession.h  WebSocketClient.cpp  WebSocketClient.h  chatmainpage.cpp  global.h  main.cpp
ChatClient/src/: ChatClient.pro  MainPage.qrc  global.h  main.cpp
ChatClient/src/model/: AsyncAvatarLoader.cpp  AsyncAvatarLoader.h  HttpApiClient.cpp  HttpApiClient.h  MessageCacheManager.cpp  MessageCacheManager.h  UserSession.cpp  UserSession.h  WebSocketClient.cpp  WebSocketClient.h
ChatClient/src/view/: AddGroupMembersDialog.cpp  AddGroupMembersDialog.h  CreateGroupDialog.cpp  CreateGroupDialog.h  CustomDialog.cpp  CustomDialog.h  InfoDialog.cpp  InfoDialog.h  LoginPage.cpp  LoginPage.h  MainPage.cpp  MainPage.h  RegisterPage.cpp  RegisterPage.h  RequestDialog.cpp  RequestDialog.h  SearchDialog.cpp  SearchDialog.h  chatmainpage.cpp  chatmainpage.h
ChatServer-http/: CMakeLists.txt  Dockerfile
ChatServer-http/lib/Debug/: bcrypt_hash.lib
ChatServer-http/lib/Release/: bcrypt_hash.lib
ChatServer-http/src/: global.h  main.cpp
ChatServer-http/src/config/: SettingController.cpp
ChatServer-http/src/cos/: AppCos.hpp
ChatServer-http/src/jwt/: Appjwt.cpp  Appjwt.h
ChatServer-http/src/redis/: AppRedis.hpp
ChatServer-http/src/server/: server.cpp
ChatServer-http/src/server/component/: AppComponent.cpp  OtherComponent.cpp  SqlComponent.cpp
ChatServer-http/src/server/controller/: AuthController.hpp  ConversationController.hpp  FileController.hpp  FriendController.hpp  GroupController.hpp  MessageController.hpp  NotificationController.hpp  UserStatusController.hpp
ChatServer-http/src/server/dto/: AuthDto.hpp  ConversationDto.hpp  ErrorStatusDto.hpp  FileDto.hpp  FriendDto.hpp  GeneralDto.hpp  GroupDto.hpp  MessageDto.hpp  UserStatusDto.hpp
ChatServer-http/src/server/handler/: AppAuthHandler.h  AppErrorHandler.cpp
ChatServer-http/src/server/interceptor/: AppAuthInterceptor.cpp
ChatServer-http/src/server/postgresql/: AppClient.hpp  AppPostgresql.hpp
ChatServer-http/src/server/service/: AuthService.hpp  ConversationService.hpp  FileService.hpp  FriendService.hpp  GroupService.hpp  MessageService.hpp  NotificationService.hpp  UserStatusService.hpp
ChatServer-http/src/server/vo/: AuthVo.hpp  CommonVo.hpp  ConversationVo.hpp  FileVo.hpp  FriendVo.hpp  GroupVo.hpp  MessageVo.hpp  NotificationVo.hpp  UserStatusVo.hpp
ChatServer-http/src/smtp/: AppEmail.hpp
ChatServer-http/src/tool/: HashUtils.hpp  UuidIdCache.hpp
ChatServer-sql/: clear.sql  cmdinit.sql  psqlinit1.sql  psqlinit2.sql  test.sql
ChatServer-websocket/: CMakeLists.txt  Dockerfile
ChatServer-websocket/src/: global.h  main.cpp
ChatServer-websocket/src/config/: SettingController.h
ChatServer-websocket/src/jwt/: Appjwt.cpp  Appjwt.h
ChatServer-websocket/src/redis/: AppRedis.hpp  RedisPubSubManager.hpp
ChatServer-websocket/src/server/: server.cpp
ChatServer-websocket/src/server/component/: AppComponent.cpp  OtherComponent.cpp  SqlComponent.cpp
ChatServer-websocket/src/server/controller/: WebSocketController.hpp
ChatServer-websocket/src/server/coroutine/: Coroutines.hpp
ChatServer-websocket/src/server/dto/: AuthDto.hpp  DistributedDto.hpp  ErrorStatusDto.hpp  FriendDto.hpp  GeneralDto.hpp  GroupDto.hpp  MessageDto.hpp  UserStatusDto.hpp  WebSocketMessageDto.hpp
ChatServer-websocket/src/server/handler/: AppAuthHandler.cpp  AppAuthHandler.h  AppErrorHandler.cpp  AppErrorHandler.h  LightweightAsyncWebSocketListener.hpp  SharedWebSocketResources.hpp  WebSocketInstanceListener.hpp
ChatServer-websocket/src/server/interceptor/: AppAuthInterceptor.cpp  AppAuthInterceptor.h
ChatServer-websocket/src/server/postgresql/: AppClient.hpp  AppPostgresql.hpp
ChatServer-websocket/src/server/service/: AuthService.hpp  ConversationService.hpp  FriendService.hpp  GroupService.hpp  MessageService.hpp  UserStatusService.hpp
ChatServer-websocket/src/server/vo/: AuthVo.hpp  CommonVo.hpp  ConversationVo.hpp  GroupVo.hpp  MessageVo.hpp  UserStatusVo.hpp
ChatServer-websocket/src/smtp/: AppEmail.hpp
ChatServer-websocket/src/tool/: RandomGenerator.hpp  UuidIdCache.hpp
ChatServer-websocket/src/websocket/: AppWebSocket.cpp  AppWebSocket.hpp
tests/: load_test.py  readme.md  requirements.txt  test_chatapp.py
